exports[`stripUnit should return a number when passed an integer 1`] = `
Object {
  "--dimension": 100,
}
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a % value 1`] = `
Array [
  1,
  "%",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a ch value 1`] = `
Array [
  1,
  "ch",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a cm value 1`] = `
Array [
  1,
  "cm",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal % value 1`] = `
Array [
  1.5,
  "%",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal ch value 1`] = `
Array [
  1.5,
  "ch",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal cm value 1`] = `
Array [
  1.5,
  "cm",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal em value 1`] = `
Array [
  1.5,
  "em",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal ex value 1`] = `
Array [
  1.5,
  "ex",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal in value 1`] = `
Array [
  1.5,
  "in",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal mm value 1`] = `
Array [
  1.5,
  "mm",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal pc value 1`] = `
Array [
  1.5,
  "pc",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal pt value 1`] = `
Array [
  1.5,
  "pt",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal px value 1`] = `
Array [
  1.5,
  "px",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal q value 1`] = `
Array [
  1.5,
  "q",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal rem value 1`] = `
Array [
  1.5,
  "rem",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal vh value 1`] = `
Array [
  1.5,
  "vh",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal vmax value 1`] = `
Array [
  1.5,
  "vmax",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal vmin value 1`] = `
Array [
  1.5,
  "vmin",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a decimal vw value 1`] = `
Array [
  1.5,
  "vw",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a em value 1`] = `
Array [
  1,
  "em",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a ex value 1`] = `
Array [
  1,
  "ex",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a in value 1`] = `
Array [
  1,
  "in",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a mm value 1`] = `
Array [
  1,
  "mm",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a pc value 1`] = `
Array [
  1,
  "pc",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a pt value 1`] = `
Array [
  1,
  "pt",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a pvhvalue 1`] = `
Array [
  1,
  "vh",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a px value 1`] = `
Array [
  1,
  "px",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a q value 1`] = `
Array [
  1,
  "q",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a rem value 1`] = `
Array [
  1,
  "rem",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a vmax value 1`] = `
Array [
  1,
  "vmax",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a vmin value 1`] = `
Array [
  1,
  "vmin",
]
`;

exports[`stripUnit should return a unitless value and the corresponding unit when passed a vw value 1`] = `
Array [
  1,
  "vw",
]
`;

exports[`stripUnit should return a unitless value when passed one 1`] = `
Object {
  "--dimension": 100,
}
`;

exports[`stripUnit should return an untouched number and an empty string when trying to return a unit when there is not one 1`] = `
Array [
  100,
  "",
]
`;

exports[`stripUnit should return an untouched string and an empty string when trying to return a unit when there is not one 1`] = `
Array [
  "red",
  "",
]
`;

exports[`stripUnit should return an untouched string when passed 1`] = `
Object {
  "--dimension": "red",
}
`;

exports[`stripUnit should strip % from decimal values 1`] = `
Object {
  "--dimension": 33.3,
}
`;

exports[`stripUnit should strip % from whole values 1`] = `
Object {
  "--dimension": 80,
}
`;

exports[`stripUnit should strip ch from decimal values 1`] = `
Object {
  "--dimension": 1.2,
}
`;

exports[`stripUnit should strip ch from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip cm from values 1`] = `
Object {
  "--dimension": 1.5,
}
`;

exports[`stripUnit should strip cm from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip em from decimal values 1`] = `
Object {
  "--dimension": 1.2,
}
`;

exports[`stripUnit should strip em from whole value 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip ex from decimal values 1`] = `
Object {
  "--dimension": 1.2,
}
`;

exports[`stripUnit should strip ex from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip in from values 1`] = `
Object {
  "--dimension": 1.5,
}
`;

exports[`stripUnit should strip in from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip mm from values 1`] = `
Object {
  "--dimension": 1.5,
}
`;

exports[`stripUnit should strip mm from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip pc from values 1`] = `
Object {
  "--dimension": 1.5,
}
`;

exports[`stripUnit should strip pc from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip pt from values 1`] = `
Object {
  "--dimension": 1.5,
}
`;

exports[`stripUnit should strip pt from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip px from values 1`] = `
Object {
  "--dimension": 1.5,
}
`;

exports[`stripUnit should strip px from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip q from values 1`] = `
Object {
  "--dimension": 1.5,
}
`;

exports[`stripUnit should strip q from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip rem from decimal values 1`] = `
Object {
  "--dimension": 1.2,
}
`;

exports[`stripUnit should strip rem from whole values 1`] = `
Object {
  "--dimension": 1,
}
`;

exports[`stripUnit should strip vh from decimal values 1`] = `
Object {
  "--dimension": 33.33,
}
`;

exports[`stripUnit should strip vh from whole values 1`] = `
Object {
  "--dimension": 100,
}
`;

exports[`stripUnit should strip vmax from decimal values 1`] = `
Object {
  "--dimension": 33.33,
}
`;

exports[`stripUnit should strip vmax from whole values 1`] = `
Object {
  "--dimension": 100,
}
`;

exports[`stripUnit should strip vmin from decimal values 1`] = `
Object {
  "--dimension": 33.33,
}
`;

exports[`stripUnit should strip vmin from whole values 1`] = `
Object {
  "--dimension": 100,
}
`;

exports[`stripUnit should strip vw from decimal values 1`] = `
Object {
  "--dimension": 33.33,
}
`;

exports[`stripUnit should strip vw from whole values 1`] = `
Object {
  "--dimension": 100,
}
`;
